force-app/main/default/objects/Pokemon__c/fields/Pokedex_Number__c.field-meta.xml
<CustomField>
    <fullName>Pokedex_Number__c</fullName>
    <externalId>true</externalId>
    <label>Pokedex Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>