force-app/main/default/objects/Pokemon__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>Type__c</referenceTo>
    <relationshipLabel>Pokemons</relationshipLabel>
    <relationshipName>Pokemons</relationshipName>
    <type>Lookup</type>
</CustomField>