force-app/main/default/objects/Pokemon__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weakness</label>
    <referenceTo>Weakness__c</referenceTo>
    <relationshipLabel>Pokemons</relationshipLabel>
    <relationshipName>Pokemons</relationshipName>
    <type>Lookup</type>
</CustomField>